<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="14dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="28dp"
        android:text="@string/note_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/todo_updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="28dp"
        android:text="@string/note_updated"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/todo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="28dp"
        android:textSize="18sp"
        android:text="@string/note_description" />

</LinearLayout>
