<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.todoedit.TodoEditFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/todo_edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="10dp"
        app:contentInsetEnd="10dp" >

        <TextView
            android:id="@+id/todo_edit_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/todo_edit_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/todo_edit_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/save"
            android:textSize="16sp"
            android:textStyle="bold" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/todo_edit_toolbar" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/title" />

        <EditText
            android:id="@+id/todo_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:autofillHints=""
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/todo_edit_description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lines="8"
            android:minLines="6"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:hint="@string/description"
            android:autofillHints=""
            android:inputType="textMultiLine" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>